--- a/django/intro/pages/templates/pages/recommend.html
+++ b/django/intro/pages/templates/pages/recommend.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRUD</title>
+    <title>Document</title>
 </head>
 <body>
-    {% block body %}
-    {% endblock %}
+    <h1>{{ count }}개를 구매하셨습니다!</h1>
+
+    {% for lotto in my_lottos %}
+    <li>{{ lotto }}</li>
+    {% endfor %}
 </body>
 </html>
