--- a/django/crud_review/student/templates/student/index.html
+++ b/django/crud_review/student/templates/student/index.html
@@ -3,12 +3,12 @@
 {% block body %}
 <h1>Article Index</h1>
 
-<a href="/articles/new/">New Article</a>
+<a href="/student/new/">New Article</a>
 
 <ul>
     {% for article in articles %}
     <li>
-        <a href="/articles/{{ article.pk }}">{{ article.title }}</a>
+        <a href="/student/{{ article.pk }}">{{ article.title }}</a>
     </li>
     {% endfor %}
 </ul>
