--- a/django/intro/intro/templates/base.html
+++ b/django/intro/intro/templates/base.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>여기는 base.html!</h1>
+    <h1>여기는 base.html</h1>
     {% block body %}
     {% endblock %}
 </body>
