--- a/django/intro/pages/templates/pages/catch.html
+++ b/django/intro/pages/templates/pages/catch.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-    <h1>받은 내용: {{ message }}</h1>
-    <h1>또 받은 내용: {{ message2 }}</h1>
+    <h1>받은 내용 : {{ message }}</h1>
+    <h2>또 받은 내용 : {{ message2 }}</h2>
 </body>
 </html>
