--- a/django/intro/pages/templates/pages/lotto.html
+++ b/django/intro/pages/templates/pages/lotto.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/generate/" method="GET">
-        <label for="c">몇개를 사십니까? </label>
-        <input id="c" type="number" name="count">
-        <input type="submit">
+    <form action="/recommend/" method="GET">
+    <label for="c">몇 개를 사십니까?</label>
+    <input id="c" type="number" name="count">
+    <input type="submit">
     </form>
 </body>
 </html>
