--- a/django/intro/pages/templates/pages/mulage.html
+++ b/django/intro/pages/templates/pages/mulage.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRUD</title>
+    <title>Document</title>
 </head>
 <body>
-    {% block body %}
-    {% endblock %}
+    <h1>{{age1}} 곱하기 {{age2}}는 {{age}}입니다</h1>
 </body>
 </html>
