--- a/django/intro/pages/templates/pages/nameage.html
+++ b/django/intro/pages/templates/pages/nameage.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRUD</title>
+    <title>Document</title>
 </head>
 <body>
-    {% block body %}
-    {% endblock %}
+    <h1>제 이름은 {{ name }}이고 나이는 {{ age }} 입니다.</h1>
 </body>
 </html>
