--- a/django/crud/articles/templates/articles/index.html
+++ b/django/crud/articles/templates/articles/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
+
 <h1>Article Index</h1>
 
 <a href="/articles/new/">New Article</a>
@@ -8,9 +9,10 @@
 <ul>
     {% for article in articles %}
     <li>
-        <a href="/articles/{{ article.pk }}">{{ article.title }}</a>
+        <a href="/articles/{{ article.pk }}/">{{ article.title }}</a>
     </li>
     {% endfor %}
 </ul>
+
 
 {% endblock %}
