--- a/django/intro/pages/templates/pages/article_new.html
+++ b/django/intro/pages/templates/pages/article_new.html
@@ -16,7 +16,7 @@
         <textarea name="content" id="" cols="30" rows="10"></textarea>
 
         <label for="">패스워드: </label>
-        <input type="password" name='pwd'>
+        <input type="password" name="pwd">
 
         <input type="submit">
     </form>
