--- a/django/crud/articles/templates/articles/edit.html
+++ b/django/crud/articles/templates/articles/edit.html
@@ -6,12 +6,10 @@
 
 <form action="/articles/{{ article.pk }}/update/" method="POST">
     {% csrf_token %}
-    <label for="title">?? : </label>
-    <input id="title" type="text" name="title" value="{{ article.title }}">
-
-    <label for="content">?? : </label>
-    <textarea type="text" name="content" cols="30" rows="10">{{ article.content }}</textarea>
-
+    <label for="">Title: </label>
+    <input type="text" name="title" value="{{ article.title }}">
+    <label for="">Content: </label>
+    <textarea type="text" name="content">{{ article.content }}</textarea>
     <input type="submit">
 </form>
 
