--- a/django/intro/pages/templates/pages/birthday.html
+++ b/django/intro/pages/templates/pages/birthday.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>{{ result }}</h1>
+    {% if result %}
+        <h1>예</h1>
+    {% else %}
+        <h1>아니오</h1>
+    {% endif %}
 </body>
 </html>
