--- a/django/intro/pages/templates/pages/dinner.html
+++ b/django/intro/pages/templates/pages/dinner.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>오늘의 저녁 메뉴는 {{ pick }}입니다.</h1>
+    <h1>오늘의 저녁 메뉴는 {{ pick }}입니다!</h1>
 </body>
 </html>
