--- a/django/intro/pages/templates/pages/dtl.html
+++ b/django/intro/pages/templates/pages/dtl.html
@@ -14,25 +14,25 @@
 
     <!-- forloop -->
     {% for food in foods %}
-        <p>{{ forloop.counter }} {{ food }}</p>
+        <p>{{ forloop.counter }}  {{ food }}</p>
     {% endfor %}
 
     <!-- empty list -->
     {% for user in empty_list %}
-        <p>{{user}}</p>
+        <p>{{ user }}</p>
     {% empty %}
         <p>비어있는 리스트입니다.</p>
     {% endfor %}
 
+
     <h3>2. 조건문</h3>
-    {% if '자장면' in foods %}
+    {% if '짜장면' in foods %}
         <p>짜장면에는 고춧가루지!</p>
-    {# elif #}
     {% endif %}
 
     <!-- 반복과 조건 -->
     {% for food in foods %}
-        <p>{{forloop.counter}}번째 도는 중...</p>
+        <p>{{ forloop.counter }}번째 도는 중...</p>
 
         {% if forloop.first %}
             <p>짜장면에는 고춧가루지!</p>
@@ -42,7 +42,8 @@
     {% endfor %}
 
     <h3>3. filter 활용</h3>
-    <!-- length filter  -->
+    <!-- 1. length -->
+    <!-- variable|filter -->
     {{ my_sentence|length }}
 
     {% for message in messages %}
@@ -65,6 +66,7 @@
     <!-- 5. truncate(글자수 제한) -->
     <p>{{ my_sentence|truncatewords:3 }}</p>
     <p>{{ my_sentence|truncatechars:3 }}</p>
+    <p>{{ my_sentence|truncatechars:10 }}</p>
 
     <!-- 6. 연산 -->
     <p>{{ 4|add:6 }}</p>
@@ -73,14 +75,17 @@
     <a href="https://google.com">Google!</a>
     {{ 'naver.com'|urlize }}
 
+
+
     <h3>4. 날짜 표현</h3>
+    <!-- 단순 현재 시각 -->
     <p>{{ datetimenow }}</p>
     <p>{% now "DATETIME_FORMAT" %}</p>
     <p>{% now "SHORT_DATETIME_FORMAT" %}</p>
     <p>{% now "DATE_FORMAT" %}</p>
     <p>{% now "SHORT_DATE_FORMAT" %}</p>
 
-    <!-- 포맷 커스텀 -->
+    <!-- 포멧 커스텀 -->
     <p>{% now "Y년 m월 d일 (D) h:i" %}</p>
 
     <p>{% now "Y" as current_year %}</p>
@@ -88,11 +93,13 @@
 
     <!-- date filter -->
     <p>{{ datetimenow|date:"SHORT_DATETIME_FORMAT" }}</p>
+    
 
     <h3>5. lorem</h3>
     <p>{% lorem %}</p>
-    <p>{% lorem 3 w %}</p>
+    <p>{% lorem 3 w random %}</p>
     <p>{% lorem 3 p %}</p>
+
 
 </body>
 </html>
