--- a/django/intro/pages/templates/pages/static_example.html
+++ b/django/intro/pages/templates/pages/static_example.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <h1>Static 파일 실습</h1>
-    <!-- ../static/sky.jpg -->
-    <!-- {% static 'sky.jpg' %} -->
-    <img src="{% static 'sky.jpg' %}" alt="sky">
+    <!-- ../static/grape.jpg -->
+    <!-- {% static 'grape.jpg' %} -->
+    <img src="{% static 'grape.jpg' %}" alt="grape">
 </body>
 </html>
