--- a/django/intro/pages/templates/pages/throw.html
+++ b/django/intro/pages/templates/pages/throw.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <form action="/catch/" method="GET">
-    <label for="message">던질 내용 : </label>
-    <input id="message" type="text" name="message">
-    <label for="message2">또 던질 내용 : </label>
-    <input id="message2" type="text" name="message2">
-    <input type="submit">
+        <label for="message">던질 내용: </label>
+        <input id="message" type="text" name="message">
+        <label for="m2">또 던질 내용: </label>
+        <input id="m2" type="text" name="message2">
+        <input type="submit">
     </form>
 </body>
 </html>
